--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "egg": "^2.5.0",
-    "egg-bin": "^4.5.0"
+    "egg-bin": "^4.5.0",
+    "egg-view-nunjucks": "^2.1.6"
   }
 }
