--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "private": true,
   "dependencies": {
     "egg": "^2.5.0",
-    "egg-bin": "^4.5.0",
     "egg-view-nunjucks": "^2.1.6"
+  },
+  "devDependencies": {
+    "egg-bin": "^4.5.0"
   }
 }
