--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "private": true,
   "dependencies": {
     "egg": "^2.5.0",
+    "egg-passport": "^2.0.1",
+    "egg-passport-local": "^1.2.1",
     "egg-view-nunjucks": "^2.1.6"
   },
   "devDependencies": {
