--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "egg-bin dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "egg-bin test"
   },
   "keywords": [
     "egg",
@@ -17,6 +17,13 @@
     "email": "bestlong168@gmail.com",
     "url": "https://github.com/bestlong/eggapp-passport-local"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bestlong/eggapp-passport-local.git"
+  },
+  "engines": {
+    "node": ">=8.9.0"
+  },
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -26,6 +33,7 @@
     "egg-view-nunjucks": "^2.1.6"
   },
   "devDependencies": {
-    "egg-bin": "^4.5.0"
+    "egg-bin": "^4.5.0",
+    "egg-mock": "^3.16.0"
   }
 }
