增加分析 coverage 的命令

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "egg-bin dev",
+    "cov": "egg-bin cov",
     "test": "egg-bin test"
   },
   "keywords": [
